<resources>
    <string name="app_name">Jems</string>
    <string name="action_settings">Settings</string>

    <string name="project_tracker">Project Tracker</string>

    <string name="quick_estimate">Quick Estimate</string>

    <string name="employee">Employees</string>
    <string name="expenses">Expenses</string>


    <string name="title_activity_login">Sign in</string>


    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_customer_tracker">Customer Tracker</string>
    <string name="title_activity_expenses">ExpensesActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <string name="selectProjectString">Select Project</string>
    <string name="materialsAmountString">#</string>


    <string name="employee_timesheet">Employee Timesheet</string>
    <string name="settings">Settings</string>
    <string name="actualCost">Cost:</string>
    <string name="projectCostLabel">Project Cost :</string>
    <string name="employeesNumLabel">Employees # :</string>
    <string name="employeesNumFieldString">#</string>
    <string name="estimatedTimeField">hrs</string>
    <string name="totalEstimatedCostString">Time Est. :</string>
    <string name="totalCostString">Total Estimate</string>
    <string name="estimatedTimeLabel">Est. Time:</string>
    <string name="calculate">Calculate</string>
    <string name="generate_estimate">Generate Estimate</string>
    <string name="add_new_project">Add New Project</string>
    <string name="addNewEmployee">Add New Employee</string>
    <string name="title_activity_employee_timesheet_detail">EmployeeTimesheetDetailActivity</string>
    <string name="title_activity_create_new_employee">CreateNewEmployee</string>
    <string name="insert_first_name">Please insert the FIRST NAME</string>
    <string name="insert_last_name">Please insert the LAST NAME</string>
    <string name="insert_wage">Please insert the WAGE</string>
    <string name="insert_date">Please insert START DATE in YYYY-MM-DD format</string>
    <string name="invalid_entry">INVALID ENTRY</string>
    <string name="title_activity_edit_employee">EditEmployeeActivity</string>
    <string name="customer_tracker">Customer Tracker</string>

</resources>
