<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectTracker">

    <TextView
        android:id="@+id/estimatorTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/quick_estimate"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectProjectButton"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/selectProjectString"
        app:layout_constraintEnd_toEndOf="@+id/estimatorTitleLabel"
        app:layout_constraintStart_toStartOf="@+id/estimatorTitleLabel"
        app:layout_constraintTop_toBottomOf="@+id/estimatorTitleLabel" />

    <TextView
        android:id="@+id/projectCostLabel"
        android:layout_width="150dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/projectCostLabel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectProjectButton" />


    <TextView
        android:id="@+id/projectCostDisplayLabel"
        android:layout_width="145dp"
        android:layout_height="57dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/projectCostLabel"
        app:layout_constraintTop_toBottomOf="@+id/selectProjectButton" />


    <TextView
        android:id="@+id/employeesNumLabel"
        android:layout_width="150dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/employeesNumLabel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectCostLabel" />

    <EditText
        android:id="@+id/employeesNumField"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:hint="@string/employeesNumFieldString"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/employeesNumLabel"
        app:layout_constraintTop_toBottomOf="@+id/projectCostDisplayLabel" />

    <TextView
        android:id="@+id/estimatedHrsLabel"
        android:layout_width="150dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/estimatedTimeLabel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeesNumLabel" />

    <EditText
        android:id="@+id/estimatedHrsField"
        android:layout_width="100dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:hint="@string/estimatedTimeField"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/estimatedHrsLabel"
        app:layout_constraintTop_toBottomOf="@+id/employeesNumField" />

    <TextView
        android:id="@+id/totalCostTitleLabel"
        android:layout_width="175dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/totalCostString"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateEstimateButton" />

    <TextView
        android:id="@+id/totalCostDisplay"
        android:layout_width="175dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalCostTitleLabel" />

    <Button
        android:id="@+id/calculateEstimateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estimatedHrsLabel" />

</android.support.constraint.ConstraintLayout>